# ps88

./: Cargo.toml  README.md  run.sh
docs/credits/: .gitignore  README.md  about.toml
docs/scripts/: run.sh
docs/todo/: README.md
ps88/: Cargo.toml
ps88/src/: editor.rs  lib.rs  main.rs
ps88/src/runtime/: runtime.rs
src/: default_script.js  editor.rs  lib.rs  params.rs
src/runtime/: js_sync.rs
vst-js/: Cargo.toml
vst-js/src/: lib.rs
vst_js/: Cargo.toml
vst_js/src/: default_script.js  editor.rs  file_watcher.rs  lib.rs  main.rs  params.rs  runtime.rs
vst_js/src/runtime/: js.rs  js_sync.rs  runtime.rs
xtask/: Cargo.toml
