[package]
name = "vst_js"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", tag = "spectral-compressor-0.4.3", features = ["assert_process_allocs", "standalone"] }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git", tag = "spectral-compressor-0.4.3" }
atomic_float = "0.1"
