[package]
name = "vst_js"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "cd9b589d23e5ee63bf194cdd99d6bc612c1a4863", features = ["assert_process_allocs", "standalone"] }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "cd9b589d23e5ee63bf194cdd99d6bc612c1a4863" }
atomic_float = "0.1"
thiserror = "1.0.59"
v8 = { git = "https://github.com/denoland/rusty_v8.git", tag = "v0.91.1" }
